# model-fetch

./: .gitignore  README.md  SPEC.md  pyproject.toml
model_fetch/: __main__.py  cli.py  config.py  placer.py  result.py  safetch_client.py
model_fetch/detector/: __init__.py  classifier.py  confidence.py  patterns.py  safetensors_inspect.py
model_fetch/sources/: __init__.py  base.py  civitai.py  direct_url.py  huggingface.py
tests/: test_civitai.py  test_classifier.py  test_cli.py  test_config.py  test_direct_url.py  test_placer.py  test_safetch_client.py
