[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-fetch"
version = "0.1.0"
description = "A source-aware wrapper around safetch for downloading and placing model files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Anthony" }
]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
model-fetch = "model_fetch.cli:entrypoint"

[tool.setuptools.packages.find]
include = ["model_fetch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
